# python_template

./: .flake8  .mypy.ini  .pre-commit-config.yaml  README.md  README.md.jinja  copier.yml  pyproject.toml  pyproject.toml.jinja
project/: .pre-commit-config.yaml  README.md.jinja  pyproject.toml.jinja
